hphp/test/slow/parser/php-reserved-name-array-2.php.expectf
Fatal error: syntax error, unexpected T_ARRAY in %s on line 4
